syntax = "proto3";

package guff.proto;

service DivisionsService {
    rpc GetDivisions(GetDivisionsRequest) returns (GetDivisionsResponse) { }
}

message GetDivisionsRequest {

}

message GetDivisionsResponse {
  repeated Division divisions = 1;
}

message Division {
  string id = 1;
  string name = 2;
}
